# MedicalDocuments

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.7ae522b  Doctors.txt  appointmentwindow.cpp  appointmentwindow.h  appointmentwindow.ui  authorizationwindow.cpp  authorizationwindow.h  authorizationwindow.ui  createwindow.cpp  createwindow.h  createwindow.ui  doctorclientwindow.cpp  doctorclientwindow.h  doctorclientwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  redactwindow.cpp  redactwindow.h  redactwindow.ui  registerwindow.cpp  registerwindow.h  registerwindow.ui
Authorization/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
Authorization/.cmake/api/v1/reply/: cmakeFiles-v1-859ca6c6448208e6b6a4.json  codemodel-v2-2627df202b4beb2a4ab6.json  directory-.-Debug-34f9f887b13d8db8c1cc.json  index-2025-01-02T21-04-28-0027.json  target-MedicalDocuments-Debug-499b07f27da5226a82cb.json  target-MedicalDocuments_autogen_timestamp_deps-Debug-9bbff0731e10bfbe9782.json
Authorization/.cmake/api/v1/reply.prev/: cache-v2-5f7ef0ad43ab90f62df3.json  cmakeFiles-v1-f4dee2e40eb47aef4caf.json  codemodel-v2-a563cbbbb9ad4d9d58f0.json  directory-.-Debug-9c9f740a4ec7d0093bde.json  index-2025-01-02T21-02-25-0269.json  target-MedicalDocuments-Debug-f08ab01590fbca412b1d.json  target-MedicalDocuments_autogen-Debug-97779d9eab1bd72ea06b.json
Authorization/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Authorization/.qtc_clangd/.cache/clangd/index/: FieldChecker.cpp.3AC3830DB8788768.idx  FieldChecker.hpp.41DC0F11C29AB4F8.idx  FieldCondition.cpp.9697A6CE7065A643.idx  FieldCondition.hpp.18D6BCE45E6BFE2F.idx  QCheckBox.4DE07FE3581D2DE7.idx  QComboBox.034C03C954251922.idx  QScrollArea.B732A04C8A77BB3B.idx  QString.81DB24C41D3B80EB.idx  QVector.BD863528FA39B8C2.idx  appointmentwindow.cpp.E3BE9FE01FC19EDA.idx  appointmentwindow.h.31756745B53A0C73.idx  authorizationwindow.cpp.951A773BA32F9FE1.idx  authorizationwindow.h.CF053BAF36743D70.idx  auto_ptr.h.C3CD7EE797853241.idx  basic_string.h.1D1D51DF2BBDF10D.idx  chrono.h.642AA760411799B7.idx  createwindow.cpp.5A73865C809BDFE0.idx  createwindow.h.265BE2DA8AC86B4B.idx  doctorclientwindow.cpp.5C7C3EB3CE23DFF5.idx  doctorclientwindow.h.87E7127ABBD245E2.idx  main.cpp.843BA531310AA6F1.idx  mainwindow.cpp.9CBE31539A2CE65F.idx  mainwindow.h.350EEAA1B2635273.idx  qabstractitemdelegate.h.FB3E100CEBDDFAC9.idx  qabstractitemmodel.h.FE20D7D21F34F205.idx  qabstractscrollarea.h.4A1219283AAC76DB.idx  qabstractslider.h.D25BDD1AEE5AB337.idx  qabstractspinbox.h.B89DB72DC0333CDF.idx  qapplication.h.EE36757C638CCE28.idx  qboxlayout.h.C600837A8A4678FF.idx  qcheckbox.h.AB1EA4BFEBB56C70.idx  qcombobox.h.DC26E11126C85469.idx  qcoreevent.h.336C65996036DA6A.idx  (+57 more)
Authorization/CustomField/: CustomField.cpp  CustomField.hpp  CustomField.ui
Authorization/FieldCheck/: FieldChecker.cpp  FieldChecker.hpp  FieldCondition.cpp  FieldCondition.hpp
Authorization/FieldCheck/DefaultCheckers/: DefaultEmailChecker.cpp  DefaultEmailChecker.hpp  DefaultPassowordChecker.cpp  DefaultPassowordChecker.hpp  DefaultPasswordChecker.cpp  DefaultPasswordChecker.hpp
Authorization/MedicalDocuments_autogen/: deps  mocs_compilation.cpp
Authorization/Pages/Login/: Login.cpp  Login.hpp  Login.ui
Authorization/Pages/SignUp/: SignUp.cpp  SignUp.hpp  SignUp.ui
Authorization/PasswordEchoChanger/: PasswordEchoChanger.cpp  PasswordEchoChanger.hpp  PasswordEchoChanger.ui
Authorization/PasswordEncryption/: PasswordEncryptor.cpp  PasswordEncryptor.hpp
Authorization/Window/: authorizationwindow.cpp  authorizationwindow.h  authorizationwindow.ui
MainClient/: CMakeLists.txt
MainClient/Doctor/AppointmentCreator/: AppointmentCreator.cpp  AppointmentCreator.hpp  AppointmentCreator.ui
MainClient/Doctor/PharmacyCreator/: PharmacyCreator.cpp  PharmacyCreator.hpp  PharmacyCreator.ui
MainClient/Doctor/PharmacySelector/: PharmacySelector.cpp  PharmacySelector.hpp  PharmacySelector.ui
MainClient/Doctor/Window/: DoctorWindow.cpp  DoctorWindow.hpp  DoctorWindow.ui
MainClient/General/AppointmentFullWidget/: AppointmentFullWidget.cpp  AppointmentFullWidget.hpp  AppointmentFullWidget.ui
MainClient/General/AppointmentInfo/: AppointmentInfo.cpp  AppointmentInfo.hpp
MainClient/General/OpenAppointmentFilter/: OpenAppointmentFilter.cpp  OpenAppointmentFilter.hpp
MainClient/General/PharmacyInfo/: PharmacyInfo.cpp  PharmacyInfo.hpp
MainClient/General/PharmacyViewWidget/: PharmacyViewWidget.cpp  PharmacyViewWidget.hpp  PharmacyViewWidget.ui
MainClient/Patient/Appointment/: PatientAppointment.cpp  PatientAppointment.hpp  PatientAppointment.ui
MainClient/Patient/Window/: PatientWindow.cpp  PatientWindow.hpp  PatientWindow.ui
Password/Check/: PasswordChecker.cpp  PasswordChecker.hpp  PasswordCondition.cpp  PasswordCondition.hpp
SQL/: CMakeLists.txt
SQL/Loaders/: AppointmentsLoader.cpp  AppointmentsLoader.hpp  MultyRecordLoader.cpp  MultyRecordLoader.hpp
SQL/Loaders/AppPharmConn/: AppPharmConnMultyLoader.cpp  AppPharmConnMultyLoader.hpp
SQL/Loaders/Appointments/: AppointmentsMultyLoader.cpp  AppointmentsMultyLoader.hpp
SQL/Loaders/Patients/: PatientsMultyLoader.cpp  PatientsMultyLoader.hpp
SQL/Loaders/Pharmacies/: PharmacyMultyLoader.cpp  PharmacyMultyLoader.hpp
SQL/Manager/: SQLManager.cpp  SQLManager.hpp
SQL/TableRecord/: TableRecord.hpp
SQL/TableRecords/: TableRecord.cpp
SQL/Tables/: DefaultRecord.cpp  DefaultRecord.hpp  TableRecord.cpp  TableRecord.hpp
SQL/Tables/AppPharmConn/: AppPharmConnRecord.cpp  AppPharmConnRecord.hpp
SQL/Tables/Appointments/: AppointmentsRecord.cpp  AppointmentsRecord.hpp
SQL/Tables/Doctors/: DoctorsRecord.cpp  DoctorsRecord.hpp
SQL/Tables/Passwords/: PasswordsRecord.cpp  PasswordsRecord.hpp  PasswordsTable.cpp  PasswordsTable.hpp
SQL/Tables/Patients/: PatientsRecord.cpp  PatientsRecord.hpp
SQL/Tables/People/: PeopleRecord.cpp  PeopleRecord.hpp
SQL/Tables/Pharmacies/: PharmaciesRecord.cpp  PharmaciesRecord.hpp
SQL/Tables/Specializations/: SpecializationsRecord.cpp  SpecializationsRecord.hpp
